# RAGMail

./: .gitignore  LaunchRagMail.py  README.md  RunRagMail.bat  __init__.py  app.py  config.py  fetch_email.py  pyproject.toml  ragmail.py  sample_processed_email.json  streamlit_app.py  updated_sample.json
Storage/: __init__.py  document_store.py  vector_store.py
connector/: connector.py
connectors/: __init__.py  archive_connector.py  base_connector.py  connector.py  gmail_connector.py  test.py
function/: query.py
json_test/: sample_processed_email.json
processor/: email_processor.py  embedding.py  parser.py
processors/: __init__.py  email_processor.py  embedding_processor.py
ragmail_data/email_data/: 4811.json  4812.json  4813.json  4814.json  4815.json  4816.json  4817.json  4818.json  4819.json  4820.json  4821.json  4822.json  4823.json  4824.json  4825.json  4826.json  4827.json  4828.json  4829.json  4830.json
ragmail_data/vector_data/: 4822.json
service/: RAGQuery.py  __init__.py  llm_only_query_service.py  llm_service.py  query.py  query_service.py  summarization.py
services/: __init__.py
tests/: test_connector.py  test_email_processor.py  test_storage.py
