[tool.poetry]
name = "ragmail"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for email management, summarization, and querying."
authors = ["dvnguyen02 <duynguyen290502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
