[tool.poetry]
name = "ragmail"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for email management, summarization, and querying."
authors = ["dvnguyen02 <duynguyen290502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
